--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -9,25 +9,30 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.andreakim.kkspetsapp.ScheduleActivity"
-    tools:showIn="@layout/activity_schedule">
-    <android.support.v7.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    tools:context="com.andreakim.kkspetsapp.LoginActivity"
+    tools:showIn="@layout/activity_login">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/login"
         android:textStyle="bold"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:id="@+id/schedule"
-        android:layout_marginBottom="8dp"
-        android:layout_alignTop="@+id/webView"
-        android:text="@string/schedule" />
-
-    <WebView
+        android:layout_marginBottom="16dp"
+        android:id="@+id/login" />
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/webView" />
-    </android.support.v7.widget.LinearLayoutCompat>
+        android:layout_height="wrap_content"
+        android:text="@string/others"
+        android:layout_marginBottom="16dp"
+        android:textStyle="italic"
+        android:layout_below="@id/login"
+        android:id="@+id/others" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_login"
+        android:text="@string/skip"
+        android:layout_below="@+id/others"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
