--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -13,26 +13,31 @@
     tools:showIn="@layout/activity_login">
 
     <TextView
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="@string/login"
-        android:textStyle="bold"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/login" />
+        android:textStyle="bold" />
     <TextView
+        android:id="@+id/others"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/others"
-        android:layout_marginBottom="16dp"
-        android:textStyle="italic"
         android:layout_below="@id/login"
-        android:id="@+id/others" />
+        android:layout_marginBottom="16dp"
+        android:text="@string/others"
+        android:textStyle="italic" />
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_login"
-        android:text="@string/skip"
         android:layout_below="@+id/others"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/mybutton"
+        android:paddingEnd="9dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingStart="9dp"
+        android:text="@string/skip" />
 
 </RelativeLayout>
