--- a/app/src/main/res/layout/content_service_area.xml
+++ b/app/src/main/res/layout/content_service_area.xml
@@ -15,33 +15,60 @@
     <TextView
         android:id="@+id/service"
         android:layout_width="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="18dp"
         android:text="@string/service"
         android:textStyle="bold" />
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/linear"
+    android:layout_below="@id/service"
+    android:orientation="horizontal">
 <EditText
     android:id="@+id/editView"
-    android:layout_width="200dp"
+    android:layout_width="100dp"
     android:layout_height="60dp"
-    android:layout_alignParentStart="true"
-    android:layout_below="@+id/service">
-
+    android:inputType="number"
+    android:maxLength="5"
+    android:layout_marginRight="12dp"
+    android:layout_marginStart="67dp">
 </EditText>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editView"
-        android:layout_alignParentEnd="true"
         android:background="@drawable/mybutton"
         android:paddingEnd="9dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:paddingStart="9dp"
-        android:text="@string/submit" />
+        android:layout_marginLeft="12dp"
+        android:text="@string/submit"
+        android:layout_toEndOf="@+id/editView" />
+</LinearLayout>
+    <TextView
+        android:id="@+id/textView_result"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linear"
+        android:layout_marginTop="36dp"
+        android:text="@string/resultHint"
+        android:layout_marginBottom="12dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold" />
 
-    <!-- map fragment goes here -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView_result"
+        android:id="@+id/staticMap"
+        android:src="@drawable/tinyzips"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
