--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -17,27 +17,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/login"
         android:textStyle="bold" />
     <TextView
         android:id="@+id/others"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login"
-        android:layout_marginBottom="16dp"
         android:text="@string/others"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:layout_above="@+id/btn_login"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="49dp" />
     <Button
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/others"
-        android:layout_centerHorizontal="true"
         android:background="@drawable/mybutton"
         android:paddingEnd="9dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:paddingStart="9dp"
-        android:text="@string/skip" />
+        android:text="@string/skip"
+        android:layout_marginBottom="66dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/mybutton"
+        android:paddingEnd="9dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingStart="9dp"
+        android:text="log in now"
+        android:layout_below="@+id/login"
+        android:id="@+id/loginNow"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
