--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -12,6 +12,9 @@
     tools:context="com.andreakim.kkspetsapp.LoginActivity"
     tools:showIn="@layout/activity_login">
 
+
+
+    <!-- going to swap this out as fragment with login activity if Login button is pressed   -->
     <TextView
         android:id="@+id/login"
         android:layout_width="match_parent"
@@ -20,15 +23,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/login"
         android:textStyle="bold" />
-    <TextView
-        android:id="@+id/others"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/others"
-        android:textStyle="italic"
-        android:layout_above="@+id/btn_login"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="49dp" />
     <Button
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
@@ -42,6 +36,16 @@
         android:layout_marginBottom="66dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/others"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/others"
+        android:textStyle="italic"
+        android:layout_above="@+id/btn_login"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="49dp" />
 
     <Button
         android:layout_width="wrap_content"
