--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -139,6 +139,7 @@
         android:text="@string/others"
         android:textStyle="italic"
         android:paddingLeft="16dp"
+        android:layout_marginBottom="16dp"
         android:paddingRight="16dp" />
 
     <Button
