--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -40,7 +40,6 @@
             android:textStyle="bold" />
     </android.support.v7.widget.LinearLayoutCompat>
 
-
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
@@ -48,16 +47,27 @@
         android:layout_above="@+id/sched"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="77dp" />
+        android:layout_marginTop="60dp" />
 
     <TextView
         android:id="@+id/sched"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/linLayout"
-        android:layout_alignParentStart="true"
-        android:text="@string/sched"
+        android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:layout_alignBottom="@+id/linLayout"
+        android:layout_alignParentEnd="true" />
+
+        <Button
+            android:id="@+id/home_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_alignParentBottom="true"
+            android:text="@string/home"
+            android:background="@drawable/mybutton" />
+
+
 
 </RelativeLayout>
+
