--- a/app/src/main/res/layout/content_service_area.xml
+++ b/app/src/main/res/layout/content_service_area.xml
@@ -15,29 +15,41 @@
     <TextView
         android:id="@+id/service"
         android:layout_width="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="18dp"
         android:text="@string/service"
         android:textStyle="bold" />
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/linear"
-    android:layout_below="@id/service"
-    android:orientation="horizontal">
-<EditText
-    android:id="@+id/editView"
-    android:layout_width="100dp"
-    android:layout_height="60dp"
-    android:inputType="number"
-    android:imeOptions="actionDone"
-    android:maxLength="5"
-    android:layout_marginRight="12dp"
-    android:layout_marginStart="67dp">
-</EditText>
+
+    <TextView
+        android:id="@+id/textView_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/resultHint"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="bold"
+        android:layout_below="@+id/editView"
+        android:layout_alignParentEnd="true" />
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_below="@id/textView_result"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/staticMap"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/home_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_alignParentBottom="true"
+        android:text="@string/home"
+        android:background="@drawable/mybutton" />
 
     <Button
         android:id="@+id/button"
@@ -50,25 +62,20 @@
         android:paddingStart="9dp"
         android:layout_marginLeft="12dp"
         android:text="@string/submit"
-        android:layout_toEndOf="@+id/editView" />
-</LinearLayout>
-    <TextView
-        android:id="@+id/textView_result"
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear"
-        android:layout_marginTop="36dp"
-        android:text="@string/resultHint"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold" />
+        android:layout_below="@+id/service"
+        android:layout_alignEnd="@+id/service" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView_result"
-        android:id="@+id/staticMap"
-        android:layout_alignParentBottom="true"/>
+    <EditText
+        android:id="@+id/editView"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:inputType="number"
+        android:imeOptions="actionDone"
+        android:maxLength="5"
+        android:layout_marginRight="12dp"
+        android:layout_alignTop="@+id/button"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/button">
+    </EditText>
 
 </RelativeLayout>
