done with functionality

--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -36,6 +36,8 @@
         android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:layout_below="@+id/login"
         android:layout_alignEnd="@+id/status"
         android:layout_marginTop="24dp"
@@ -49,12 +51,15 @@
         android:layout_alignStart="@+id/btn_login"
         android:layout_centerVertical="true"
         android:text="@string/signed_out"
-        android:textColor="@android:color/white"
         android:textSize="14sp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="36dp"/>
+
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:weightSum="3"
         android:layout_height="wrap_content">
     <Button
@@ -64,18 +69,18 @@
         android:layout_weight="1"
         android:text="@string/sign_out"
         android:background="@drawable/mybutton"/>
-    <TextView
-        android:layout_width="0dp"
-        android:id="@+id/btn_spacer"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
     <Button
-        android:id="@+id/disconnect_button"
+        android:id="@+id/btn_schedule"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/disconnect"
-        android:background="@drawable/mybutton" />
+        android:text="schedule"
+        android:background="@drawable/mybutton"/>
+
     </android.support.v7.widget.LinearLayoutCompat>
 </LinearLayout>
 
@@ -83,48 +88,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentStart="true">
-        <TextView
-            android:id="@+id/title_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="36sp" />
-
-        <TextView
-            android:id="@+id/detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fadeScrollbars="true"
-            android:gravity="center"
-            android:maxLines="5"
-            android:padding="10dp"
-            android:scrollbars="vertical"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/others"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
+            android:layout_weight="1"
             android:paddingRight="16dp"
             android:text="@string/others"
             android:textStyle="italic"
             android:layout_below="@+id/status"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="45dp" />
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="16dp"/>
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
             android:background="@drawable/mybutton"
             android:text="@string/skip"
             android:layout_below="@+id/linearLayout"
