--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -39,7 +39,6 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:layout_below="@+id/login"
-        android:layout_alignEnd="@+id/status"
         android:layout_marginTop="24dp"
         android:layout_gravity="center_horizontal" />
 
@@ -47,6 +46,8 @@
         android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:layout_marginTop="12dp"
         android:layout_alignStart="@+id/btn_login"
         android:layout_centerVertical="true"
@@ -90,6 +91,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentStart="true">
 
@@ -120,7 +123,14 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"/>
     </LinearLayout>
 
-
+    <Button
+        android:id="@+id/home_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_alignParentBottom="true"
+        android:text="@string/home"
+        android:background="@drawable/mybutton" />
 </RelativeLayout>
 
 
