--- a/app/src/main/res/layout-land/content_login.xml
+++ b/app/src/main/res/layout-land/content_login.xml
@@ -12,130 +12,126 @@
     tools:context="com.andreakim.kkspetsapp.LoginActivity"
     tools:showIn="@layout/activity_login">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/linear1"
-    android:orientation="vertical"
-    android:weightSum="3">
-
-
-    <TextView
-        android:id="@+id/login"
+    <LinearLayout
+        android:id="@+id/linear1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/detail"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:layout_weight="1"
-        android:text="@string/login"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold" />
+        android:orientation="vertical"
+        android:weightSum="3">
 
-    <TextView
-        android:id="@+id/others"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:text="@string/others"
-        android:textStyle="italic"
-        android:layout_toEndOf="@+id/textView" />
-</LinearLayout>
+
+        <TextView
+            android:id="@+id/login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/detail"
+            android:layout_weight="1"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:text="@string/login"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/others"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/textView"
+            android:layout_weight="1"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:text="@string/others"
+            android:textStyle="italic" />
+    </LinearLayout>
 
 
     <LinearLayout
+        android:id="@+id/linear2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linear2"
-        android:layout_marginTop="16dp"
         android:layout_below="@id/linear1"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:weightSum="3">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:paddingRight="16dp"
-        android:layout_alignTop="@+id/home_button"
-        android:layout_toStartOf="@+id/sign_out_button">
-    </com.google.android.gms.common.SignInButton>
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/home_button"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_toStartOf="@+id/sign_out_button"
+            android:layout_weight="1"
+            android:paddingRight="16dp"></com.google.android.gms.common.SignInButton>
 
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_weight="1"
-        android:text="@string/signed_out"
-        android:layout_alignBaseline="@+id/home_button"
-        android:layout_alignBottom="@+id/home_button"
-        android:layout_toEndOf="@+id/home_button" />
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/home_button"
+            android:layout_alignBottom="@+id/home_button"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_toEndOf="@+id/home_button"
+            android:layout_weight="1"
+            android:text="@string/signed_out" />
 
-    <Button
-        android:id="@+id/btn_schedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@drawable/mybutton"
-        android:text="schedule"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
+        <Button
+            android:id="@+id/btn_schedule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:text="schedule" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linear3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
         android:layout_below="@id/linear2"
-        android:id="@+id/linear3">
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
 
 
-    <Button
-        android:id="@+id/home_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/mybutton"
-        android:text="@string/home" />
+        <Button
+            android:id="@+id/home_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:text="@string/home" />
 
 
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/mybutton"
-        android:text="@string/skip"
-/>
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:text="@string/skip" />
 
 
         <Button
             android:id="@+id/sign_out_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_weight="1"
             android:background="@drawable/mybutton"
-            android:text="@string/sign_out"
- />
+            android:text="@string/sign_out" />
 
 
     </LinearLayout>
